Fix row and column collapse

--- a/LeaderPivot.Blazor/wwwroot/leader-pivot.scss
+++ b/LeaderPivot.Blazor/wwwroot/leader-pivot.scss
@@ -37,7 +37,6 @@
 
 .switch {
     position: relative;
-    display: inline-block;
     white-space: nowrap;
 }
 
